--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,28 +1,13 @@
-# Use an official Node runtime as a parent image
-FROM node:14-slim AS build
+FROM node:24-alpine3.21
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
+WORKDIR /yolo-client
 
-# Copy the package.json and package-lock.json files to the container
-COPY package*.json ./
-
-# Install application dependencies
-RUN npm install
-
-# Copy the rest of the application code to the container
 COPY . .
 
-FROM alpine:3.16.7
+RUN npm install
 
-WORKDIR /app
+RUN npm run build
 
-RUN apk update && apk add npm
+EXPOSE 3001
 
-COPY --from=build /usr/src/app /app
-
-# Expose the port the app runs on
-EXPOSE 3000
-
-# Define the command to run your app
 CMD ["npm", "start"]
