--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,34 @@
 version: "3.8"
 
 services:
-  backend:
-    depends_on:
-      - database
-    build: ./backend
-    ports:
-      - "5000:5000"
-    environment:
-      MONGO_URI: mongodb://database:27017/yolomy
-
   database:
     image: mongo:4.0.28-xenial
     ports:
       - "27017:27017"
     volumes:
       - yolo:/data/db
+
+  backend:
+    depends_on:
+      - database
+    build:
+      context: ./backend
+    image: yolo-backend:v1.0.0
+    ports:
+      - "5000:5000"
+    environment:
+      MONGO_URI: mongodb://database:27017/yolomy
+
+  frontend:
+    depends_on:
+      - backend
+    build:
+      context: ./client
+    image: yolo-frontend:v1.0.0
+    ports:
+      - "3000:3000"
+    environment:
+      REACT_APP_BACKEND_URL: http://backend:5000
 
 volumes:
   yolo:
