--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "27017:27017"
     volumes:
       - yolo:/data/db
+    networks:
+      - yolo-net
 
   backend:
     depends_on:
@@ -18,6 +20,8 @@ services:
       - "5000:5000"
     environment:
       MONGO_URI: mongodb://database:27017/yolomy
+    networks:
+      - yolo-net
 
   frontend:
     depends_on:
@@ -29,6 +33,12 @@ services:
       - "3000:3000"
     environment:
       REACT_APP_BACKEND_URL: http://backend:5000
+    networks:
+      - yolo-net
 
 volumes:
   yolo:
+
+networks:
+  yolo-net:
+    driver: bridge
