--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,22 @@
-FROM node:24-alpine3.21
+FROM node:24-alpine3.21 AS builder
 
 WORKDIR /yolo-client
 
-COPY . .
+COPY package*.json .
 
-RUN npm install
+RUN npm ci
+
+COPY . .
 
 RUN npm run build
 
-EXPOSE 3001
+
+FROM node:24-alpine3.21 AS production
+
+WORKDIR /yolo-client
+
+COPY --from=builder /yolo-client/build .
+
+EXPOSE 3000
 
 CMD ["npm", "start"]
