--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,14 @@ FROM node:24-alpine3.21
 
 WORKDIR /yolo
 
-COPY . .
+COPY package*.json .
 
-RUN npm install
+RUN npm ci --only=production && npm cache clean --force
+
+COPY . .
 
 EXPOSE 5000
 
 CMD ["npm", "start"]
+
+
