add non-root user for container security

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:24-alpine3.21
 
+RUN addgroup yolo && adduser -S -G yolo yolo
+
+USER yolo
+
 WORKDIR /yolo
 
 COPY package*.json .
@@ -11,5 +15,6 @@ COPY . .
 EXPOSE 5000
 
 CMD ["npm", "start"]
+
 
 
