--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,9 +13,15 @@ RUN npm run build
 
 FROM nginx:alpine
 
+RUN addgroup yolo && adduser -S -G yolo yolo
+
 RUN rm -rf /usr/share/nginx/html/*
 
 COPY --from=builder /yolo-client/build /usr/share/nginx/html
+
+RUN chown -R yolo:yolo /usr/share/nginx/html
+
+USER yolo
 
 EXPOSE 80
 
