--- a/roles/install-start-docker/tasks/main.yml
+++ b/roles/install-start-docker/tasks/main.yml
@@ -1,47 +1,58 @@
----
-- name: Install required packages for installing Docker
-  apt:
-    name:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - gnupg
-      - lsb-release
-    state: present
-    update_cache: yes
+- name: Install and start Docker
+  block:
+    - name: Install required packages for installing Docker
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        state: present
+        update_cache: yes
 
-- name: Add Docker official GPG key to authenticate the downloaded Docker package
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
+    - name: Add Docker official GPG key to authenticate the downloaded Docker package
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
 
-- name: Add Docker’s apt repository for Ubuntu
-  apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-    state: present
+    - name: Add Docker’s apt repository for Ubuntu
+      apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        state: present
 
-- name: Install Docker engine, Docker-CLI and containerd(container runtime)
-  apt:
-    name:
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
-    state: present
-    update_cache: yes
+    - name: Install Docker engine, Docker-CLI and containerd(container runtime)
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+        state: present
+        update_cache: yes
 
-- name: Start Docker and enable it to start on boot
-  service:
-    name: docker
-    state: started
-    enabled: yes
+    - name: Start Docker and enable it to start on boot
+      service:
+        name: docker
+        state: started
+        enabled: yes
 
-- name: Create custom Docker network
-  community.docker.docker_network:
-    name: yolo-net
-    driver: bridge
-    state: present
+  tags:
+    - docker-install
+    - docker-start
 
-- name: Create Docker volume
-  community.docker.docker_volume:
-    name: yolo
-    state: present
+- name: Configure Docker volume and custom network
+  block:
+    - name: Create custom Docker network
+      community.docker.docker_network:
+        name: yolo-net
+        driver: bridge
+        state: present
+
+    - name: Create Docker volume
+      community.docker.docker_volume:
+        name: yolo
+        state: present
+
+  tags:
+    - docker-network
+    - docker-volume
