--- a/roles/yolo-frontend/tasks/main.yml
+++ b/roles/yolo-frontend/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: start yolo frontend container
+- name: Start yolo frontend container
   community.docker.docker_container:
     name: yolo-frontend
     image: birisi/yolo-frontend:v1.0.0
@@ -8,3 +8,6 @@
       REACT_APP_BACKEND_URL: http://backend:5000
     networks:
       - name: yolo-net
+
+  tags:
+    - frontend-start
