--- a/roles/backend/vars/main.yml
+++ b/roles/backend/vars/main.yml
@@ -1,2 +1,3 @@
----
-# vars file for backend
+forwarded_port: 5000
+yolo_backend_image: "birisi/yolo-backend:v1.0.0"
+database_uri: "mongodb://database:27017/yolomy"
