--- a/roles/install-start-docker/tasks/main.yml
+++ b/roles/install-start-docker/tasks/main.yml
@@ -13,12 +13,12 @@
 
     - name: Add Docker official GPG key to authenticate the downloaded Docker package
       apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
+        url: "{{ apt_key_url }}"
         state: present
 
     - name: Add Docker’s apt repository for Ubuntu
       apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        repo: "{{ apt_repository_repo_url }}"
         state: present
 
     - name: Install Docker engine, Docker-CLI and containerd(container runtime)
