--- a/roles/install-start-docker/vars/main.yml
+++ b/roles/install-start-docker/vars/main.yml
@@ -1,2 +1,2 @@
----
-# vars file for start-docker
+apt_key_url: https://download.docker.com/linux/ubuntu/gpg
+apt_repository_repo_url: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
