--- a/roles/yolo-frontend/tasks/main.yml
+++ b/roles/yolo-frontend/tasks/main.yml
@@ -1,11 +1,11 @@
 - name: Start yolo frontend container
   community.docker.docker_container:
     name: yolo-frontend
-    image: birisi/yolo-frontend:v1.0.0
+    image: "{{ frontend_image }}"
     ports:
-      - "3000:80"
+      - "{{ forwarded_port }}:80"
     env:
-      REACT_APP_BACKEND_URL: http://backend:5000
+      REACT_APP_BACKEND_URL: "{{ backend_url }}"
     networks:
       - name: yolo-net
 
