add annotations to deployments and statefulsets for tracking purposes

--- a/manifests/Deployment-backend.yml
+++ b/manifests/Deployment-backend.yml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: yolo-backend
+  annotations:
+    ownership: atuya
+    description: Backend deployment for Yolo application
 spec:
   replicas: 2
   selector:
